# afretip

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: config-dev.yaml  config.yaml
data/: additional_test_logs.txt  rmm_simulation_network.json  rmm_simulation_powershell.json  rmm_simulation_registry.json  rmm_simulation_scheduled_task.json  rmm_simulation_service.json  test_sample_log.json  threat_intelligence.db
experiments/: generate_test_data.py  generate_test_logs.py  test_runner.py
experiments/benign/business_applications/: ben_06_office_automation.json
experiments/benign/legitimate_admin/: ben_01_admin_powershell.json  ben_02_system_maintenance.json
experiments/benign/legitimate_network/: ben_16_cloud_sync.json
experiments/benign/system_processes/: ben_11_windows_updates.json
experiments/malicious/data_exfiltration/: exf_01_dns_tunneling.json
experiments/malicious/evasion_techniques/: eva_01_obfuscated_script.json
experiments/malicious/lateral_movement/: lat_01_psexec.json  lat_02_wmi_execution.json
experiments/malicious/living_off_land/: lol_01_certutil_download.json  lol_02_bitsadmin_transfer.json  lol_03_wmic_execution.json  lol_04_mshta_script.json  lol_05_regsvr32_bypass.json
experiments/malicious/process_injection/: inj_01_dll_injection.json  inj_02_process_hollowing.json
experiments/malicious/rmm_abuse/: rmm_01_encoded_powershell.json  rmm_02_service_persistence.json  rmm_03_scheduled_task.json  rmm_04_registry_persistence.json  rmm_05_network_beaconing.json
experiments/results/: comprehensive_report_20250818_203713.json  test_summary.csv
experiments/results/raw/: ben_01_admin_powershell_result.json  ben_02_system_maintenance_result.json  ben_06_office_automation_result.json  ben_11_windows_updates_result.json  ben_16_cloud_sync_result.json  eva_01_obfuscated_script_result.json  exf_01_dns_tunneling_result.json  inj_01_dll_injection_result.json  inj_02_process_hollowing_result.json  lat_01_psexec_result.json  lat_02_wmi_execution_result.json  lol_01_certutil_download_result.json  lol_02_bitsadmin_transfer_result.json  lol_03_wmic_execution_result.json  (+7 more)
scripts/: install.sh  start.sh  test.sh  uninstall.sh
src/afretip.egg-info/: SOURCES.txt  entry_points.txt
src/threat_intel/: __init__.py  cli.py  main.py
tests/: conftest.py
tests/unit/: test_models.py
(+24 files in other folders)
